--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+server.port=8083
+
 spring.datasource.name=imooc_mall_datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/imooc_mall?serverTimezone=Asia/Shanghai&useUnicode=true$characterEncoding=utf-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=chenzh@2020
+
+# ??mapper?????
+mybatis.mapper-locations=classpath:mappers/*.xml
