--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=chenzh@2020
 
 # ??mapper?????
 mybatis.mapper-locations=classpath:mappers/*.xml
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
