--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ mybatis.mapper-locations=classpath:mappers/*.xml
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
+
+# ???????????????????
+file.upload.dir = /Users/chenzh12/Desktop/Learn/imooc-mall-prepare-static/
