--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.redis.password=
 
 # ???????????????????
 file.upload.dir = /Users/chenzh12/Desktop/Learn/imooc-mall-prepare-static/
+file.upload.ip = 127.0.0.1
