--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.redis.password=
 # ???????????????????
 file.upload.dir = /Users/chenzh12/Desktop/Learn/imooc-mall-prepare-static/
 file.upload.ip = 127.0.0.1
+
+#????
+spring.mail.host=smtp.qq.com
+spring.mail.port=587
+spring.mail.username=1003569727
+spring.mail.password=vinsymiehlvwbfca
+spring.mail.default-encoding=utf-8
+spring.mail.properties.mail.smtp.auth=true
