--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ file.upload.ip = 127.0.0.1
 spring.mail.host=smtp.qq.com
 spring.mail.port=587
 spring.mail.username=1003569727
-spring.mail.password=vinsymiehlvwbfca
+spring.mail.password=
 spring.mail.default-encoding=utf-8
 spring.mail.properties.mail.smtp.auth=true
