用户验证从session升级为JWT

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
 			<artifactId>redisson</artifactId>
 			<version>3.13.6</version>
 		</dependency>
+		<!-- pom.xml中引入生成JWT的依赖 -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.14.0</version>
+		</dependency>
 
 	</dependencies>
 
