--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,18 @@
 			<version>3.14.0</version>
 		</dependency>
 
+		<!--引入处理Excel的POI类-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.16</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
