对图片的处理缩放、水印（已添加注释）

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.16</version>
 		</dependency>
+		<!-- 图片处理依赖 -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.14</version>
+		</dependency>
 
 	</dependencies>
 
