--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.redis.password=
 
 # ???????????????????
 file.upload.dir = /Users/chenzh12/Desktop/Learn/imooc-mall-prepare-static/
-file.upload.ip = 127.0.0.1
+file.upload.uri = 127.0.0.1:8083
 
 #????
 spring.mail.host=smtp.qq.com
