--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.username=1003569727
 spring.mail.password=
 spring.mail.default-encoding=utf-8
 spring.mail.properties.mail.smtp.auth=true
+
+# JSON???????
+spring.jackson.time-zone=Asia/Shanghai
